force-app/main/default/objects/Account/fields/Primary_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Provider__c</fullName>
    <label>Primary Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACE INA</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Allstate</fullName>
            </value>
            <value>
                <fullName>Aviva</fullName>
            </value>
            <value>
                <fullName>Belair Direct</fullName>
            </value>
            <value>
                <fullName>CAA</fullName>
            </value>
            <value>
                <fullName>Cayuga Mutual Insurance Company</fullName>
            </value>
            <value>
                <fullName>Certas</fullName>
            </value>
            <value>
                <fullName>Chubb</fullName>
            </value>
            <value>
                <fullName>Coachman</fullName>
            </value>
            <value>
                <fullName>Commonwell Mutual</fullName>
            </value>
            <value>
                <fullName>Co-operators</fullName>
            </value>
            <value>
                <fullName>COSECO</fullName>
            </value>
            <value>
                <fullName>Crawoford</fullName>
            </value>
            <value>
                <fullName>CUMIS</fullName>
            </value>
            <value>
                <fullName>Desjardins Financial Security</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>Echelon</fullName>
            </value>
            <value>
                <fullName>Economical</fullName>
            </value>
            <value>
                <fullName>Edge Mutual</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Federated</fullName>
            </value>
            <value>
                <fullName>Gore</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>Heartland Farm</fullName>
            </value>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Jevco</fullName>
            </value>
            <value>
                <fullName>McKillop</fullName>
            </value>
            <value>
                <fullName>Meloche Monnex</fullName>
            </value>
            <value>
                <fullName>Middlesex Mutual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>