force-app/main/default/objects/Account/fields/Principal_Repaid_as_of_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Repaid_as_of_To_Date__c</fullName>
    <label>Principal Repaid as of To Date</label>
    <summarizedField>Opportunity.Principal_Repaid_as_of_To_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>