force-app/main/default/objects/Account/fields/Principal_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Principal_Reversed__c</fullName>
    <label>Principal Reversed</label>
    <summarizedField>Opportunity.Principal_Reversed__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>