force-app/main/default/objects/Account/fields/Principal_With_Reserve_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_With_Reserve_To_Date__c</fullName>
    <label>Principal With Reserve To Date</label>
    <summarizedField>Opportunity.Principal_With_Reserve_To_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>