force-app/main/default/objects/Account/fields/Reason_for_LTV__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_LTV__c</fullName>
    <label>Reason for LTV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Lawyer Relationship</fullName>
            </value>
            <value>
                <fullName>Assessment Loan - NA</fullName>
            </value>
            <value>
                <fullName>Strong Case</fullName>
            </value>
            <value>
                <fullName>Settled File</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>