force-app/main/default/objects/Account/fields/Replacement_Counsel_Document_Send__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Counsel_Document_Send__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?id=&quot;&amp;Id&amp;&quot;&amp;TemplateID=&quot;&amp;IF(ISPICKVAL(Business_Unit__c,&quot;ELFI&quot;),$Label.ELFI_Replacement_Counsel_Document,$Label.Rhino_Replacement_Counsel_Document) 
&amp; &quot;&amp;DS7=17&amp;DocuSignVisible=1&amp;QueryStringField=Docusign_Parameters__c&quot; 
&amp; &quot;&amp;DocuSignR1Id=&quot; &amp; Primary_Contact__c 
&amp; &quot;&amp;DocuSignR1Type=Signer&amp;DocuSignR1Role=Signer+1&amp;DocuSignR1RoutingOrder=1&quot; 
&amp; &quot;&amp;DocuSignR2Id=&quot; &amp; Lawyer__c 
&amp; &quot;&amp;DocuSignR2Type=Signer&amp;DocuSignR2Role=Signer+2&amp;DocuSignR2RoutingOrder=2&quot; 
&amp; &quot;&amp;DocuSignEndPoint=NA3&amp;DocuSignBrandName=&quot; &amp; TEXT(Business_Unit__c) &amp; &quot;Signing&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Counsel Document Send</label>
    <type>Text</type>
</CustomField>