force-app/main/default/objects/Account/fields/Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Amount__c</fullName>
    <label>Reserve Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>