force-app/main/default/objects/Account/fields/Reserved_Loans_Count__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Loans_Count__c</fullName>
    <label>Reserved Loans Count</label>
    <summaryFilterItems>
        <field>Opportunity.Is_Reserve_Applied__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>