force-app/main/default/objects/Account/fields/Settlement_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Loan_Number__c</fullName>
    <label>Settlement Loan Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>