force-app/main/default/objects/Account/fields/Total_Deferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Deferred_Revenue__c</fullName>
    <label>Total Deferred Revenue</label>
    <summarizedField>Opportunity.Deferred_Revenue__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>