force-app/main/default/objects/Account/fields/Total_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Amount__c</fullName>
    <formula>Drawdown_Total_Amount__c - Principal_Reversed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>