force-app/main/default/objects/Account/fields/Total_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal_Remaining__c</fullName>
    <label>Total Principal Remaining</label>
    <summarizedField>Opportunity.Principal_Remaining__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Stage_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed - Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>