force-app/main/default/objects/Account/fields/Unbilled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Revenue__c</fullName>
    <formula>Outstanding_Balance_as_of_To_Date__c - Value_at_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unbilled Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>