force-app/main/default/objects/Account/fields/Underwriter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriter_Notes__c</fullName>
    <label>Underwriter Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>