force-app/main/default/objects/Account/fields/Value_At_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_At_Reserve_Date__c</fullName>
    <label>Value At Reserve Date</label>
    <summarizedField>Opportunity.Value_At_Reserve_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>