force-app/main/default/objects/Account/validationRules/Client_account_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_account_creation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(),  ISPICKVAL( Account_Type__c, &apos;Client&apos;), NOT(Conversion_Flag__c) )</errorConditionFormula>
    <errorMessage>Please start with creating a Lead for adding new clients</errorMessage>
</ValidationRule>