force-app/main/default/objects/Account/listViews/All_Rhino_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Rhino_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Related_Law_Firm__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Rhino</value>
    </filters>
    <label>All Rhino Accounts</label>
</ListView>