force-app/main/default/objects/Account/listViews/Lawfirms.listView-meta.xml
<ListView>
    <fullName>Lawfirms</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Authorization_Clause__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Law_Firm</value>
    </filters>
    <label>Lawfirms</label>
</ListView>