force-app/main/default/objects/Account/listViews/Rhino_DBO.listView-meta.xml
<ListView>
    <fullName>Rhino_DBO</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>from_external_database__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Rhino DBO</label>
</ListView>