force-app/main/default/objects/Account/listViews/X00_All_Accounts.listView-meta.xml
<ListView>
    <fullName>X00_All_Accounts</fullName>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_NUMBER</field>
        <operation>greaterThan</operation>
        <value>1000</value>
    </filters>
    <label>00 - All Accounts</label>
</ListView>